# Astral

./: .gitignore  API.cpp  API.h  Astral.cpp  Astral.h  Astral.sln  Astral.vcxproj  Astral.vcxproj.filters  CMakeLists.txt  ErrorManager.h  README.md  RefCount.cpp  RefCount.h  cpp.hint  generate_include.py
AstralTesting/: AstralTesting.vcxproj  AstralTesting.vcxproj.filters  CMakeLists.txt  Main.cpp  demo.ast  main.ast
Compilation/: Keyword.h
Compilation/Compiler/: Bytecode.h  Compiler.cpp  Compiler.h  OpType.h  Rom.h
Compilation/Linker/: Linker.cpp  Linker.h
Compilation/Parsing/: AllNodeTypes.h  Expression.cpp  Expression.h  ParseTree.h  Parser.cpp  Parser.h  Statement.h
Compilation/Parsing/Expressions/: BinaryOp.cpp  BinaryOp.h  CallParameters.cpp  DecrementExpression.h  Factorial.cpp  Factorial.h  FunctionCall.cpp  Grouping.cpp  Grouping.h  IncrementExpression.h  Literal.cpp  Literal.h  UnaryOp.cpp  UnaryOp.h
Compilation/Parsing/Statements/: Block.cpp  Block.h  Break.cpp  Function.cpp  IfStatement.h  Include.h  ParamList.cpp  ParamList.h  PrintStatement.cpp  PrintStatement.h  Program.cpp  Program.h  Using.cpp  Variable.cpp  Variable.h  VariableAssignment.cpp  VariableAssignment.h  VariableDefinition.cpp  VariableDefinition.h  While.cpp
Compilation/Tokenisation/: Lexeme.h  Lexer.cpp  Lexer.h  Token.h  TokenType.h
Documentation/: lib.md
Runtime/: BindFunction.cpp  BindFunction.h  BooleanHandler.cpp  BooleanHandler.h  BuiltInFunctions.cpp  BuiltInFunctions.h  BuiltInLibraries.cpp  BuiltInLibraries.h  Interpreter.cpp  Interpreter.h  Library.cpp  MathsHandler.cpp  MathsHandler.h  Result.h
Runtime/Memory/: GarbageCollector.cpp  GarbageCollector.h  MemoryBlock.cpp  MemoryBlock.h
Runtime/Types/: AstralTypes.cpp  AstralTypes.h
Runtime/Variables/: Variable.cpp  Variable.h  Variables.cpp  Variables.h
src/: API.cpp  Astral.cpp  Astral.h  ErrorManager.h  Types.h
src/Compilation/Compiler/: Bytecode.h  Compiler.cpp  Compiler.h  OpType.h  Rom.h
src/Compilation/Linker/: Linker.cpp  Linker.h
src/Compilation/Parsing/: AllNodeTypes.h  ParseTree.cpp  Parser.cpp  Parser.h  Statement.cpp  Statement.h
src/Compilation/Parsing/Expressions/: BinaryOp.cpp  BinaryOp.h  CallParameters.h  DecrementExpression.cpp  FunctionCall.h  Grouping.cpp  IncrementExpression.cpp  IncrementExpression.h  Literal.cpp  Literal.h  UnaryOp.cpp
src/Compilation/Parsing/Statements/: Continue.cpp  Continue.h  Empty.cpp  ExpressionStatement.cpp  ExpressionStatement.h  IfStatement.cpp  Include.cpp  MemberAssignment.cpp  MemberAssignment.h  ParamList.cpp  ParamList.h  Program.cpp  Program.h  Return.cpp  Return.h  Struct.h  StructDefinition.cpp  StructDefinition.h  VariableAssignment.h  While.h
src/Compilation/Tokenisation/: Lexer.cpp  TokenType.h
src/Runtime/: BooleanHandler.cpp  BuiltInFunctions.cpp  BuiltInFunctions.h  BuiltInLibraries.cpp  Interpreter.cpp  Interpreter.h
src/Runtime/Memory/: GarbageCollector.cpp  GarbageCollector.h
src/Runtime/Types/: AstralTypes.cpp  AstralTypes.h
src/Runtime/Variables/: Variable.cpp  Variables.h
